--- a/get_metadata.ipynb
+++ b/get_metadata.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load PrimeNet_full_ConceptNet.json\n",
     "import json\n",
-    "with open('PrimeNet_full_ConceptNet_with_multiword.json') as f:\n",
+    "with open('data/primenet_may_12.json') as f:\n",
     "    data = json.load(f)"
    ]
   },
@@ -7868,7 +7868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7923,7 +7923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7941,16 +7941,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "72649"
+       "72554"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
