--- a/get_metadata.ipynb
+++ b/get_metadata.ipynb
@@ -7962,7 +7962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -7970,26 +7970,24 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "64239\n",
+      "64629\n",
       "2\n",
-      "50557\n",
+      "49058\n",
       "3\n",
-      "33314\n",
+      "29712\n",
       "4\n",
-      "17583\n",
+      "12058\n",
       "5\n",
-      "6895\n",
+      "3302\n",
       "6\n",
-      "2643\n",
+      "1126\n",
       "7\n",
-      "645\n",
+      "274\n",
       "8\n",
-      "99\n",
+      "35\n",
       "9\n",
-      "23\n",
-      "10\n",
       "17\n",
-      "11\n",
+      "10\n",
       "17\n"
      ]
     }
@@ -8662,7 +8660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8679,7 +8677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8689,7 +8687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8706,7 +8704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8717,13 +8715,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save G_dict to a json\n",
     "import json\n",
-    "with open('graph.json', 'w') as f:\n",
+    "with open('graph_may_15.json', 'w') as f:\n",
     "    json.dump(G_dict, f)"
    ]
   },
